# SplitserV2

./: .gitignore  README.md  init_sql.sql  keepalive.txt
.github/workflows/: keep_repo_alive.yml  monthly_export.yml
api/: .config.php  .htaccess  api.php  cors_guard.php  db.php
api/routes/: get_all_expenses.php  get_all_rides.php  post_add_expense.php  post_add_ride.php  post_mark_exported.php
etl/: .gitignore  noxfile.py  pyproject.toml
etl/pipeline/: __init__.py  api_handler.py  constants.py  export_to_splitser.py  extract.py  get_splitwise_info.py  load.py  main.py  transform.py
frontend/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json
frontend/waggo/: index.html  package-lock.json  package.json  vite.config.js
frontend/waggo/public/: .htaccess
frontend/waggo/src/: App.jsx  config.js  main.jsx
frontend/waggo/src/components/: Header.jsx
frontend/waggo/src/pages/: AddExpense.jsx  AddRide.jsx  UnexportedData.jsx
workflows/: monthly_export.yml
